// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders regular FloatingButton with a single action 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "backgroundColor": "transparent",
      "bottom": 0,
      "elevation": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 0,
    }
  }
>
  <View
    accessibilityLabel="Floating Action Button"
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#486c86",
        "borderRadius": 28,
        "bottom": 30,
        "elevation": 5,
        "height": 56,
        "justifyContent": "center",
        "overflow": "hidden",
        "position": "absolute",
        "right": 30,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 5,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 3,
        "width": 56,
        "zIndex": 2,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300,
          },
          Object {
            "alignItems": "center",
            "borderRadius": 28,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
            "zIndex": 3,
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20,
          }
        }
      >
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders regular FloatingButton with multiple actions 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "backgroundColor": "transparent",
      "bottom": 0,
      "elevation": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 0,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "flex-end",
        "bottom": 94,
        "opacity": 0,
        "position": "absolute",
        "right": -1000,
        "zIndex": 10,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "elevation": 0,
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "elevation": 0,
            "flex": 1,
            "flexDirection": "row",
            "marginBottom": 5,
            "paddingBottom": 8,
            "paddingLeft": 0,
            "paddingRight": 38,
            "paddingTop": 8,
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 4,
                "elevation": 5,
                "height": 22,
                "marginTop": 8,
                "paddingHorizontal": 8,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 5,
                  "width": 0,
                },
                "shadowOpacity": 0.35,
                "shadowRadius": 3,
              },
              Object {
                "marginRight": 14,
              },
              Object {
                "backgroundColor": "#FFF",
                "elevation": 5,
                "shadowOffset": Object {
                  "height": 5,
                },
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontSize": 16,
                  "fontWeight": "normal",
                  "textAlign": "left",
                },
                Object {
                  "color": "rgba(33, 33, 33, 0.87)",
                  "fontSize": 14,
                  "lineHeight": 20,
                },
              ]
            }
          >
            Location
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 20,
                "elevation": 5,
                "height": 40,
                "justifyContent": "center",
                "padding": 5,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 5,
                  "width": 0,
                },
                "shadowOpacity": 0.35,
                "shadowRadius": 3,
                "width": 40,
              },
              Object {
                "backgroundColor": "#486c86",
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFF",
                  "fontSize": 25,
                },
                undefined,
                Object {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "elevation": 0,
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "elevation": 0,
            "flex": 1,
            "flexDirection": "row",
            "marginBottom": 5,
            "paddingBottom": 8,
            "paddingLeft": 0,
            "paddingRight": 38,
            "paddingTop": 8,
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 4,
                "elevation": 5,
                "height": 22,
                "marginTop": 8,
                "paddingHorizontal": 8,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 5,
                  "width": 0,
                },
                "shadowOpacity": 0.35,
                "shadowRadius": 3,
              },
              Object {
                "marginRight": 14,
              },
              Object {
                "backgroundColor": "#FFF",
                "elevation": 5,
                "shadowOffset": Object {
                  "height": 5,
                },
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontSize": 16,
                  "fontWeight": "normal",
                  "textAlign": "left",
                },
                Object {
                  "color": "rgba(33, 33, 33, 0.87)",
                  "fontSize": 14,
                  "lineHeight": 20,
                },
              ]
            }
          >
            Accessibility
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 20,
                "elevation": 5,
                "height": 40,
                "justifyContent": "center",
                "padding": 5,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 5,
                  "width": 0,
                },
                "shadowOpacity": 0.35,
                "shadowRadius": 3,
                "width": 40,
              },
              Object {
                "backgroundColor": "#486c86",
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFF",
                  "fontSize": 25,
                },
                undefined,
                Object {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "elevation": 0,
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "elevation": 0,
            "flex": 1,
            "flexDirection": "row",
            "marginBottom": 5,
            "paddingBottom": 8,
            "paddingLeft": 0,
            "paddingRight": 38,
            "paddingTop": 8,
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 4,
                "elevation": 5,
                "height": 22,
                "marginTop": 8,
                "paddingHorizontal": 8,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 5,
                  "width": 0,
                },
                "shadowOpacity": 0.35,
                "shadowRadius": 3,
              },
              Object {
                "marginRight": 14,
              },
              Object {
                "backgroundColor": "#FFF",
                "elevation": 5,
                "shadowOffset": Object {
                  "height": 5,
                },
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontSize": 16,
                  "fontWeight": "normal",
                  "textAlign": "left",
                },
                Object {
                  "color": "rgba(33, 33, 33, 0.87)",
                  "fontSize": 14,
                  "lineHeight": 20,
                },
              ]
            }
          >
            Video
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 20,
                "elevation": 5,
                "height": 40,
                "justifyContent": "center",
                "padding": 5,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 5,
                  "width": 0,
                },
                "shadowOpacity": 0.35,
                "shadowRadius": 3,
                "width": 40,
              },
              Object {
                "backgroundColor": "#486c86",
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFF",
                  "fontSize": 25,
                },
                undefined,
                Object {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Floating Action Button"
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#486c86",
        "borderRadius": 28,
        "bottom": 30,
        "elevation": 5,
        "height": 56,
        "justifyContent": "center",
        "overflow": "hidden",
        "position": "absolute",
        "right": 30,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 5,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 3,
        "width": 56,
        "zIndex": 2,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300,
          },
          Object {
            "alignItems": "center",
            "borderRadius": 28,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
            "zIndex": 3,
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20,
          }
        }
      >
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders regular FloatingButton with specific icon 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "backgroundColor": "transparent",
      "bottom": 0,
      "elevation": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 0,
    }
  }
>
  <View
    accessibilityLabel="Floating Action Button"
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#486c86",
        "borderRadius": 28,
        "bottom": 30,
        "elevation": 5,
        "height": 56,
        "justifyContent": "center",
        "overflow": "hidden",
        "position": "absolute",
        "right": 30,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 5,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 3,
        "width": 56,
        "zIndex": 2,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300,
          },
          Object {
            "alignItems": "center",
            "borderRadius": 28,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
            "zIndex": 3,
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#333333",
            "margin": 20,
          }
        }
      >
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
</View>
`;
